flask/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  labels:
    app: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: aarole/bb:1.0.3
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "250m"
            limits:
              cpu: "500m"
