flask/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
spec:
  selector:
    app: flask-app
  ports:
    - port: 80
      targetPort: 5000
  type: LoadBalancer
